---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
SvrHidenProperty ==
    /\(\A x \in sTCPLinkSet:
        /\ x.Type /= "Attacker"
        /\ x.State = "ESTABLISHED") \* C1
    /\(\A y \in aTCPLinkSet:
        /\ y.State /= "ESTABLISHED") \* C2
================================================================================
